이펙티브자바 item44

--- a/src/main/java/study/effective_java/item43/정리.md
+++ b/src/main/java/study/effective_java/item43/정리.md
@@ -1,6 +1,6 @@
 :trophy: 이펙티브 자바 스터디 - 아이템 43
 
-:book: 아이템 43: 람다보다는 메서드 참조를 사용할
+:book: 아이템 43: 람다보다는 메서드 참조를 사용하라
 
 ## 핵심
 > 메서드 참조(method reference)는 람다(lambda)보다  
