[이펙티브자바] null이 아닌, 빈 컬렉컬렉션이나 배열을 반환하라.

--- a/src/main/java/study/effective_java/ch08_메서드/item53/정리.md
+++ b/src/main/java/study/effective_java/ch08_메서드/item53/정리.md
@@ -119,7 +119,7 @@ public static void main(String[] args) {
 - **이름 분리**가 더 낫다. ex) `saveAll(Member...)`, `saveTo(String, Member...)`
 
 ## 제네릭과 varargs
-- 제네릭 varargs는 **힙 오염 경고**가 날 수 있다 -> **안전함을 보장할 수 있을 때만 `@SafeVarargs`
+- 제네릭 varargs는 **힙 오염 경고**가 날 수 있다 -> **안전함을 보장할 수 있을 때만** `@SafeVarargs`
 - 라이브러리 메서드에선 **가능하면 제네릭 varargs를 피하고** 컬렉션을 받는 것을 고려하자.
 
 
