[system-design-interview] ch02 - 개략적인 규모 측정 - 오타수정

--- a/src/main/java/study/system_design_interview/ch02_개략적인_규모추정/ch02.md
+++ b/src/main/java/study/system_design_interview/ch02_개략적인_규모추정/ch02.md
@@ -22,7 +22,6 @@
 | **스토리지(HDD)** | 디스크에서 1MB 순차적으로 READ     | 30 ms  | 플래터 회전하며 순차 읽기          |
 | **네트워크(원거리)** | 한 패킷의 CA → 네덜란드 왕복 지연시간  | 150 ms | 대륙 간 왕복 (해저케이블)         |
 
-
 - 메모리는 빠르지만 디스크는 아직 느리다.
 - 디스크 탐색(seek)은 가능한 피하라.
 - 단순한 압축 알고리즘은 빠르다.
@@ -71,6 +70,6 @@ flowchart TB
 
 - DAU = MAU x 일간 활성 비율
 - 평균 QPS = DAU x 일 트윗 수 / 86,400
-- 피크 QPS = 평균 QPS x 피크 계수
+- 최대 QPS = 평균 QPS x 피크 계수
 - 텍스트 저장량 = 일 트윗 수 x 트윗 크기 x 보관 기간
 - 미디어 저장량 = 일 트윗 수 x 미디어 비율 x 미디어 크기 x 보관 기간
